Adding remote configurations

--- a/src/test/resources/config/config.qa.properties
+++ b/src/test/resources/config/config.qa.properties
@@ -1,4 +1,6 @@
 browser=chrome
+browserversion=
+testname=
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 headless=false
@@ -9,6 +11,6 @@ username=deepti@opencart.com
 password=Selenium@123
 
 remote=true
-huburl=http://localhost:4444/wd/hub
+huburl=http://3.143.113.231:4444/wd/hub
 
 
